<resources>
    <string name="app_name">BasketBall Score Counter</string>
    <string name="team_A">TEAM A</string>
    <string name="score_A">0</string>
    <string name="Points_3">+3 POINTS</string>
    <string name="Points_2">+2 POINTS</string>
    <string name="free_Throw">FREE THROW</string>
    <string name="team_B">TEAM B</string>
    <string name="score_B">0</string>
    <string name="Reset">RESET!</string>
    <string name="ABOUT">About!</string>
    <string name="developer">Developed by karthik</string>
    <string name="Contact">Contact</string>
</resources>
